== 0.2.3 (In Git)

=== New features
* Updated language for Dutch (Bart Zonneveld)
* Updated language for Italian (Alessandro Baroni)
* Updated language for Japanese (KAKUTANI Shintaro)

== 0.2.2 2009-03-25

This release includes some minor changes to make Cucumber work with pure Java. Cucumber
has already worked with Java for a while (using JRuby and step definitions in Ruby),
but now you can write step definitions in pure Java!

Check out the Cucumber Java project for more details:
http://github.com/aslakhellesoy/cucumber_java/tree/master

== 0.2.1 2009-03-25

This release fixes a few minor bugs and adds a couple of new features.

== Bugfixes
* Fixed Cucumber, and rails controller error handling (#49 Matt Patterson)
* HTML Formatter doesn't work correctly with scenario Outlines. (#260 Aslak Hellesøy)
* After blocks are run in reverse order of registration. (#113 Aslak Hellesøy)
* Snippets are showing 'Ands' (#249 Aslak Hellesøy)

=== New features
* Snippets use a regexp and block arguments if the step name has "quoted" arguments. (Aslak Hellesøy)
* Cucumber::Ast::Feature#to_sexp includes the file name. (Aslak Hellesøy)
* support/env.rb is not loaded when --dry-run is specified. This is to increase performance. (Aslak Hellesøy)
* New usage formatter. This is the foundation for editor autocompletion and navigation between steps and step definitions. (#209 Aslak Hellesøy)

=== Removed features
* -S/--step-definitions option introduced in 0.2.0 is removed. Use --format usage [--dry-run] [--no-color].

== 0.2.0 2009-03-18

This release sports a bunch of new and exciting features, as well a major rewrite of Cucumber's internals. 
The rewrite was done to address technical debt and to have a code base that is easier to evolve and maintain. 

There are some changes to the Gherkin language that breaks backwards compatible with the 0.1.x series. 
Most importantly, "GivenScenario" and "More Examples" no longer exist. See the "Removed features" section 